--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&family=Cinzel:wght@500&family=Handlee&family=Kaushan+Script&family=Niconne&family=Special+Elite&display=swap" rel="stylesheet">    <title>News</title>
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
